--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -90,11 +90,11 @@
 
 @font-face {
   font-family: 'fec-icons';
-  src:url('fonts/fec-icons.eot');
-  src:url('fonts/fec-icons.eot?#iefix') format('embedded-opentype'),
-    url('fonts/fec-icons.woff') format('woff'),
-    url('fonts/fec-icons.ttf') format('truetype'),
-    url('fonts/fec-icons.svg#fec-icons') format('svg');
+  src:url('../fonts/fec-icons.eot');
+  src:url('../fonts/fec-icons.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/fec-icons.woff') format('woff'),
+    url('../fonts/fec-icons.ttf') format('truetype'),
+    url('../fonts/fec-icons.svg#fec-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
