--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -30,120 +30,127 @@
   vertical-align: middle;
 }
 
-// Icon font icons
-[data-icon]:before {
-  font-family: "fec-icons" !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "fec-icons" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+[class^='icon-'],
+[class*=' icon-'] {
+  @include icon-base();
 }
 
 .i-plus-circle:before {
-  content: "\61";
+  content: '\61';
 }
+
 .i-minus-circle:before {
-  content: "\62";
+  content: '\62';
 }
+
 .i-x:before {
-  content: "\63";
+  content: '\63';
 }
+
 .i-addcalendar:before {
-  content: "\64";
+  content: '\64';
 }
+
 .i-alert:before {
-  content: "\65";
+  content: '\65';
 }
+
 .i-book:before {
-  content: "\68";
+  content: '\68';
 }
+
 .i-chart:before {
-  content: "\6c";
+  content: '\6c';
 }
+
 .i-check:before {
-  content: "\6d";
+  content: '\6d';
 }
+
 .i-mail:before {
-  content: "\6f";
+  content: '\6f';
 }
+
 .i-success:before {
-  content: "\70";
+  content: '\70';
 }
+
 .i-subscribe:before {
-  content: "\71";
+  content: '\71';
 }
+
 .i-left:before {
-  content: "\72";
+  content: '\72';
 }
+
 .i-star:before {
-  content: "\74";
+  content: '\74';
 }
+
 .i-sort:before {
-  content: "\77";
+  content: '\77';
 }
+
 .i-search:before {
-  content: "\78";
+  content: '\78';
 }
+
 .i-export:before {
-  content: "\79";
+  content: '\79';
 }
+
 .i-error:before {
-  content: "\7a";
+  content: '\7a';
 }
+
 .i-right:before {
-  content: "\41";
+  content: '\41';
 }
+
 .i-email:before {
-  content: "\43";
+  content: '\43';
 }
+
 .i-ellipsis:before {
-  content: "\44";
+  content: '\44';
 }
+
 .i-download:before {
-  content: "\45";
+  content: '\45';
 }
+
 .i-down:before {
-  content: "\46";
+  content: '\46';
 }
+
 .i-map:before {
-  content: "\47";
+  content: '\47';
 }
+
 .i-menu:before {
-  content: "\48";
+  content: '\48';
 }
+
 .i-phone:before {
-  content: "\49";
+  content: '\49';
 }
+
 .i-two-candidates:before {
-  content: "\4a";
+  content: '\4a';
 }
+
 .i-table:before {
-  content: "\4c";
+  content: '\4c';
 }
+
 .i-plus:before {
-  content: "\4e";
+  content: '\4e';
 }
+
 .i-election-primary:before {
-  content: "\4f";
+  content: '\4f';
 }
+
 .i-github:before {
-  content: "\50";
+  content: '\50';
 }
