--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -441,6 +441,11 @@
   }
 }
 
+// Temporary button for testing new typeahead button styles
+.button--typeahead-filter {
+  @include u-background-image('i-down--primary');
+}
+
 // Special Buttons
 //
 // Common icon buttons for various purposes
