Temporarily hiding calendar toggles for testing

--- a/scss/modules/_calendar.scss
+++ b/scss/modules/_calendar.scss
@@ -498,7 +498,7 @@
   }
 
   .fc-right {
-    display: block;
+    // display: block; Uncomment to restore toggles
     float: right;
 
     .fc-button-group {
